--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,6 +13,6 @@
         <input type='password' id='password' name='password' required>
     </div>
     <button type="submit">Register</button>
-
-
 </form>
+
+<a href="/login">Go To Login</a>
