Finishing the code. ignore emmet test

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,7 @@
-<h3>Here's my test login page</h3>
+<h1>Welcome to Waste Not's Homepage</h1>
+<br>
+<h3>Hi, <%= name %></h3>
+
+<form action="/logout?_method=DELETE" method=POST>
+<button type="submit">Log Out</button>
+</form>
