--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,7 +10,7 @@
     </div>
     <div>
         <label for="password">Password</label>
-        <input type='password' id='password' name='password' required>
+        <input type='password' id='password' name='password' pattern=".{6,}"   required title="6 characters minimum" required>
     </div>
     <button type="submit">Register</button>
 </form>
