Login still not working... :(

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,6 +12,10 @@
         <label for="password">Password</label>
         <input type='password' id='password' name='password' pattern=".{6,}"   required title="6 characters minimum" required>
     </div>
+    <div>
+        <label for="phone">Phone</label>
+        <input type='phone' id='phone' name='phone' required title="9 digits minimum" required>
+    </div>
     <button type="submit">Register</button>
 </form>
 
