--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,11 +6,11 @@
 <form action= '/login' method="POST">
     <div>
         <label for="email">Email Address</label>
-        <input type='email' id='email' name='email' required>
+        <input type='email' id='emailLog' data-id='emailLog' name='email' required>
     </div>
     <div>
         <label for="password">Password</label>
-        <input type='password' id='password' name='password' required>
+        <input type='password' id='passwordLog' data-id='passwordLog' name='password' required>
     </div>
     <button type="submit">Login</button>
 </form>
