--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,16 +3,17 @@
     <%= messages.error %>
 <% } %>
 
-<form action= '/login' method="POST">
+<form id='loginForm'>
     <div>
         <label for="email">Email Address</label>
-        <input type='email' id='emailLog' data-id='emailLog' name='email' required>
+        <input type='email' id='emailLog' data-id='emailLog' name='emailLog' required>
     </div>
     <div>
         <label for="password">Password</label>
-        <input type='password' id='passwordLog' data-id='passwordLog' name='password' required>
+        <input type='password' id='passwordLog' data-id='passwordLog' name='passwordLog' required>
     </div>
     <button type="submit">Login</button>
 </form>
 
 <a href="/register">Register</a>
+<script src="login-server.js"></script>
