continued work - login not working still

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
     <%= messages.error %>
 <% } %>
 
+<body>
 <form id='loginForm'>
     <div>
         <label for="email">Email Address</label>
@@ -16,4 +17,6 @@
 </form>
 
 <a href="/register">Register</a>
-<script src="login-server.js"></script>
+
+<script src="../login-server.js"></script>
+</body>
